--- a/input.css
+++ b/input.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;600;700;800&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -7,6 +9,7 @@ body {
   background-repeat: no-repeat;
   background-size: 800px;
   background-position: 90% -25%;
+  font-family: 'Be Vietnam Pro', sans-serif;
 }
 
 section#cta {
